fixed index to include stylesheet

--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
-<div itemscope itemtype="http://schema.org/LocalBusiness">
-  <h1 itemprop="name">
-    Michael Gokey ~ Web Application Developer</h1>
-    Phone: 
-    <span itemprop="telephone">
+<!doctype html>
+
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title>Styling Phone Links</title>
+    <meta name="description" content="simple styling and SEO for phone links">
+    <meta name="author" content="Michael Gokey">
+    <link rel="stylesheet" href="style.css">
+    <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+  <![endif]-->
+</head>
+
+<body>
+    <div itemscope itemtype="http://schema.org/LocalBusiness">
+        <h1 itemprop="name">
+            Michael Gokey ~ Web Application Developer</h1>
+        Phone:
+        <span itemprop="telephone">
       <a href="tel:+14046710721">
          404.671.0721
       </a>
     </span>
-</div>
+    </div>
+</body>
+
+</html>
